--- a/styles/base.css
+++ b/styles/base.css
@@ -36,17 +36,6 @@ header, footer {
   margin: 0 auto;
 }
 
-main {
-    width: min(800px, 100%);
-    margin: 0 auto;
-    display: grid;
-    grid-template: 50px 1fr / 3fr 2fr;
-}
-
-main h1 {
-    grid-column-end: span 2;
-}
-
 h1, h2, h3, h4, h5, h6 {
 	font-family: var(--heading-font);
 	color: var(--primary-color);
@@ -60,9 +49,13 @@ nav, p, section, article {
 
 span#course-title {
     display: block;
+    font-size: 2em;
+    padding: 0.5em;
+    text-align: center;
 }
 
 nav {
+    margin: 0;
     display: flex;
     align-self: flex-end;
     flex-wrap: wrap;
@@ -81,7 +74,19 @@ nav a {
 
 nav a:hover {
 	text-decoration: underline;
+    cursor: pointer;
     /* transition: ; */
+}
+
+main {
+    width: min(800px, 100%);
+    margin: 1em auto;
+    display: grid;
+    grid-template: 50px 1fr / 3fr 2fr;
+}
+
+main h1 {
+    grid-column-end: span 2;
 }
 
 section.card {
@@ -92,4 +97,16 @@ section.card {
 section.card img {
     height: 150px;
     width: auto;
+}
+
+footer {
+    background-color: var(--primary-color);
+    color: var(--light-font-color);
+    padding: 0.5em;
+}
+
+footer p {
+    margin: 0;
+    padding: 0.5em;
+    text-align: center;
 }
