--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -1,6 +1,6 @@
-nav a.toggle-button {
+/* nav a.toggle-button {
     flex-self: flex-end;
-}
+} */
 
 nav a.toggle-button:hover {
     text-decoration: none;
